fix home alignment

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,6 +1,9 @@
 .home {
   @extend %cover;
+  height: 100vh;
   &__wrapper {
+    width: 100%;
+    height: 100%;
   }
 
   &__gallery {
@@ -100,7 +103,8 @@
     position: absolute;
     bottom: 5%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -5%);
+
     user-select: none;
   }
 }
